--- a/async-race/src/style.scss
+++ b/async-race/src/style.scss
@@ -55,3 +55,11 @@ input {
 .pagination {
   margin: 50px 40px 10px;
 }
+
+.winners {
+  margin: 10px 40px;
+}
+
+.winners th, .winners td {
+  padding: 5px;
+}
